--- a/about.html
+++ b/about.html
@@ -23,32 +23,32 @@
 </head>
 
 <body>
-    header>
-    <nav class="navbar navbar-expand-lg fixed-top">
-        <div class="container-fluid">
-            <a class="navbar-brand" href="#" title="Homepage">MB</a>
-            <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarNav"
-                aria-controls="navbarNav" aria-expanded="false" aria-label="Toggle navigation">
-                <span class="navbar-toggler-icon"><i class="fa-solid fa-bars"></i></span>
-            </button>
-            <div class="collapse navbar-collapse" id="navbarNav">
-                <ul class="navbar-nav">
-                    <li class="nav-item">
-                        <a class="nav-link " aria-current="page" href="#" title="Homepage">Home</a>
-                    </li>
-                    <li class="nav-item">
-                        <a class="nav-link active" href="/about.html" title="About Mariana">About</a>
-                    </li>
-                    <li class="nav-item">
-                        <a class="nav-link" href="/work.html" title="Mariana's work">Projects</a>
-                    </li>
-                    <li class="nav-item">
-                        <a class="nav-link" href="/contact.html" title="Contact Mariana">Contact</a>
-                    </li>
-                </ul>
+    <header>
+        <nav class="navbar navbar-expand-lg fixed-top">
+            <div class="container-fluid">
+                <a class="navbar-brand" href="/index.html" title="Homepage">MB</a>
+                <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarNav"
+                    aria-controls="navbarNav" aria-expanded="false" aria-label="Toggle navigation">
+                    <span class="navbar-toggler-icon"><i class="fa-solid fa-bars"></i></span>
+                </button>
+                <div class="collapse navbar-collapse" id="navbarNav">
+                    <ul class="navbar-nav">
+                        <li class="nav-item">
+                            <a class="nav-link " aria-current="page" href="/index.html" title="Homepage">Home</a>
+                        </li>
+                        <li class="nav-item">
+                            <a class="nav-link active" href="/about.html" title="About Mariana">About</a>
+                        </li>
+                        <li class="nav-item">
+                            <a class="nav-link" href="/work.html" title="Mariana's work">Projects</a>
+                        </li>
+                        <li class="nav-item">
+                            <a class="nav-link" href="/contact.html" title="Contact Mariana">Contact</a>
+                        </li>
+                    </ul>
+                </div>
             </div>
-        </div>
-    </nav>
+        </nav>
     </header>
 
     <main class="container">
@@ -63,7 +63,7 @@
                         working on. I love to learn and have fun while doing it.</p>
                 </div>
                 <div class="col-md-4">
-                    <img src="/images/my-photo.png" alt="" class="my-photo">
+                    <img src="/images/my-photo.png" alt="Mariana's photo" class="my-photo">
                 </div>
 
                 <div class="skills container" id="skills">
