--- a/contact.html
+++ b/contact.html
@@ -23,51 +23,48 @@
 </head>
 
 <body>
-    header>
-    <nav class="navbar navbar-expand-lg fixed-top">
-        <div class="container-fluid">
-            <a class="navbar-brand" href="#" title="Homepage">MB</a>
-            <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarNav"
-                aria-controls="navbarNav" aria-expanded="false" aria-label="Toggle navigation">
-                <span class="navbar-toggler-icon"><i class="fa-solid fa-bars"></i></span>
-            </button>
-            <div class="collapse navbar-collapse" id="navbarNav">
-                <ul class="navbar-nav">
-                    <li class="nav-item">
-                        <a class="nav-link " aria-current="page" href="#" title="Homepage">Home</a>
-                    </li>
-                    <li class="nav-item">
-                        <a class="nav-link" href="/about.html" title="About Mariana">About</a>
-                    </li>
-                    <li class="nav-item">
-                        <a class="nav-link" href="/work.html" title="Mariana's work">Projects</a>
-                    </li>
-                    <li class="nav-item">
-                        <a class="nav-link active" href="/contact.html" title="Contact Mariana">Contact</a>
-                    </li>
-                </ul>
+    <header>
+        <nav class="navbar navbar-expand-lg fixed-top">
+            <div class="container-fluid">
+                <a class="navbar-brand" href="/index.html" title="Homepage">MB</a>
+                <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarNav"
+                    aria-controls="navbarNav" aria-expanded="false" aria-label="Toggle navigation">
+                    <span class="navbar-toggler-icon"><i class="fa-solid fa-bars"></i></span>
+                </button>
+                <div class="collapse navbar-collapse" id="navbarNav">
+                    <ul class="navbar-nav">
+                        <li class="nav-item">
+                            <a class="nav-link " aria-current="page" href="/index.html" title="Homepage">Home</a>
+                        </li>
+                        <li class="nav-item">
+                            <a class="nav-link" href="/about.html" title="About Mariana">About</a>
+                        </li>
+                        <li class="nav-item">
+                            <a class="nav-link" href="/work.html" title="Mariana's work">Projects</a>
+                        </li>
+                        <li class="nav-item">
+                            <a class="nav-link active" href="/contact.html" title="Contact Mariana">Contact</a>
+                        </li>
+                    </ul>
+                </div>
             </div>
-        </div>
-    </nav>
+        </nav>
     </header>
 
 
     <main class="container">
 
-        <div class="col-11">
-            <div class="container">
-                <div class="projects-heading col-md-7">
-                    <h1>Contact Me</h1>
-                    <h2>Let's get in touch!</h2>
-                    <div class="contact-img col-md-4">
-                        <a href="mailto:mariana.balanchuk@gmail.com" target="_blank"><img src="/images/contact_me.svg"
-                                class="contact-pic img-fluid" alt=""></a>
-                    </div>
-                </div>
+        <div class="projects-heading col-md-6">
+            <h1>Contact Me</h1>
+            <h2>Let's get in touch!</h2>
 
-            </div>
         </div>
-        <div class="social-media col-1">
+        <div class="contact-img col-md-3">
+            <a href="mailto:mariana.balanchuk@gmail.com" target="_blank"><img src="/images/contact_me.svg"
+                    class="contact-pic img-fluid"
+                    alt="illustration of a person using different tools to contact someone"></a>
+        </div>
+        <div class="social-media-big col-12">
             <a href="https://www.instagram.com/mariana.balanchuk/" target="_blank"><i
                     class="fa-brands fa-instagram"></i></a>
             <a href="https://www.linkedin.com/in/mariana-balanchuk/" target="_blank"><i
@@ -75,20 +72,8 @@
             <a href="https://github.com/asteriab" target="_blank"><i class="fa-brands fa-github"></i></a>
             <a href="mailto:mariana.balanchuk@gmail.com" target="_blank"><i class="fa-solid fa-envelope"></i></a>
         </div>
+
     </main>
-    <footer>
-        <div class="container-fluid footer-cont row">
-            <div class="col-md-5">
-                <h4>Work Inquiry</h4>
-                <p class="text-muted">Let's work together!</p>
-            </div>
-            <div class="col-md-3">
-                <button class="contact-button">
-                    <a href="mailto:mariana.balanchuk@gmail.com" target="_blank"> Contact me </a>
-                </button>
-            </div>
-        </div>
-    </footer>
 </body>
 
 
