--- a/index.html
+++ b/index.html
@@ -27,7 +27,7 @@
     <header>
         <nav class="navbar navbar-expand-lg fixed-top">
             <div class="container-fluid">
-                <a class="navbar-brand" href="#" title="Homepage">MB</a>
+                <a class="navbar-brand" href="/index.html" title="Homepage">MB</a>
                 <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarNav"
                     aria-controls="navbarNav" aria-expanded="false" aria-label="Toggle navigation">
                     <span class="navbar-toggler-icon"><i class="fa-solid fa-bars"></i></span>
@@ -35,7 +35,7 @@
                 <div class="collapse navbar-collapse" id="navbarNav">
                     <ul class="navbar-nav">
                         <li class="nav-item">
-                            <a class="nav-link active" aria-current="page" href="#" title="Homepage">Home</a>
+                            <a class="nav-link active" aria-current="page" href="/index.html" title="Homepage">Home</a>
                         </li>
                         <li class="nav-item">
                             <a class="nav-link" href="/about.html" title="About Mariana">About</a>
@@ -75,7 +75,8 @@
                     <ul class="col-12 row">
                         <li class="col-md-6 project">
                             <a href="https://graceful-kleicha-63eb8d.netlify.app/" target="_blank"><img
-                                    src="/images/pizza-landing-page.png" class="project-img img-fluid" alt=""></a>
+                                    src="/images/pizza-landing-page.png" class="project-img img-fluid"
+                                    alt="Pizza project picture"></a>
                             <h4>Pizza Landing Page</h4>
                             <button class="view-button"><a href="https://graceful-kleicha-63eb8d.netlify.app/"
                                     target="_blank">View
@@ -84,7 +85,8 @@
                         </li>
                         <li class="col-md-6 project">
                             <a href="https://frabjous-meringue-af1318.netlify.app/" target="_blank"><img
-                                    src="/images/weather-app.png" class="project-img img-fluid" alt=""></a>
+                                    src="/images/weather-app.png" class="project-img img-fluid"
+                                    alt="Weather app picture"></a>
                             <h4>Weather App</h4>
                             <button class="view-button"> <a href="https://frabjous-meringue-af1318.netlify.app/"
                                     target="_blank">View
