--- a/work.html
+++ b/work.html
@@ -23,32 +23,32 @@
 </head>
 
 <body>
-    header>
-    <nav class="navbar navbar-expand-lg fixed-top">
-        <div class="container-fluid">
-            <a class="navbar-brand" href="#" title="Homepage">MB</a>
-            <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarNav"
-                aria-controls="navbarNav" aria-expanded="false" aria-label="Toggle navigation">
-                <span class="navbar-toggler-icon"><i class="fa-solid fa-bars"></i></span>
-            </button>
-            <div class="collapse navbar-collapse" id="navbarNav">
-                <ul class="navbar-nav">
-                    <li class="nav-item">
-                        <a class="nav-link " aria-current="page" href="#" title="Homepage">Home</a>
-                    </li>
-                    <li class="nav-item">
-                        <a class="nav-link" href="/about.html" title="About Mariana">About</a>
-                    </li>
-                    <li class="nav-item">
-                        <a class="nav-link active" href="/work.html" title="Mariana's work">Projects</a>
-                    </li>
-                    <li class="nav-item">
-                        <a class="nav-link" href="/contact.html" title="Contact Mariana">Contact</a>
-                    </li>
-                </ul>
+    <header>
+        <nav class="navbar navbar-expand-lg fixed-top">
+            <div class="container-fluid">
+                <a class="navbar-brand" href="/index.html" title="Homepage">MB</a>
+                <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarNav"
+                    aria-controls="navbarNav" aria-expanded="false" aria-label="Toggle navigation">
+                    <span class="navbar-toggler-icon"><i class="fa-solid fa-bars"></i></span>
+                </button>
+                <div class="collapse navbar-collapse" id="navbarNav">
+                    <ul class="navbar-nav">
+                        <li class="nav-item">
+                            <a class="nav-link " aria-current="page" href="/index.html" title="Homepage">Home</a>
+                        </li>
+                        <li class="nav-item">
+                            <a class="nav-link" href="/about.html" title="About Mariana">About</a>
+                        </li>
+                        <li class="nav-item">
+                            <a class="nav-link active" href="/work.html" title="Mariana's work">Projects</a>
+                        </li>
+                        <li class="nav-item">
+                            <a class="nav-link" href="/contact.html" title="Contact Mariana">Contact</a>
+                        </li>
+                    </ul>
+                </div>
             </div>
-        </div>
-    </nav>
+        </nav>
     </header>
 
 
@@ -67,7 +67,8 @@
                     <ul class="col-12 row">
                         <li class="col-md-6 project">
                             <a href="https://graceful-kleicha-63eb8d.netlify.app/" target="_blank"><img
-                                    src="/images/pizza-landing-page.png" class="project-img img-fluid" alt=""></a>
+                                    src="/images/pizza-landing-page.png" class="project-img img-fluid"
+                                    alt="Pizza project picture"></a>
                             <h4>Pizza Landing Page</h4>
                             <p>Built with HTML and CSS</p>
                             <button class="view-button"><a href="https://graceful-kleicha-63eb8d.netlify.app/"
@@ -77,7 +78,8 @@
                         </li>
                         <li class="col-md-6 project">
                             <a href="https://frabjous-meringue-af1318.netlify.app/" target="_blank"><img
-                                    src="/images/weather-app.png" class="project-img img-fluid" alt=""></a>
+                                    src="/images/weather-app.png" class="project-img img-fluid"
+                                    alt="Weather App picture"></a>
                             <h4>Weather App</h4>
                             <p>Built with HTML, CSS and JavaScript</p>
                             <button class="view-button"> <a href="https://frabjous-meringue-af1318.netlify.app/"
